# SFML-engine

./: .travis.yml  CMakeLists.txt  README.md
SFML-engine.xcodeproj/project.xcworkspace/xcuserdata/dave.xcuserdatad/: UserInterfaceState.xcuserstate
include/: AnimatedSprite.h  Animation.h  Banimation.h  Constants.h  Enemy.h  Game.h  Game.hpp  Map.h  Map.hpp  Player.h  Player.hpp  Tile.h  View.h
src/: AnimatedSprite.cpp  Animation.cpp  Banimation.cpp  Game.cpp  Map.cpp  Player.cpp  Tile.cpp  View.cpp  data  main.cpp
src/assets/: data
